--- a/shared/css/base.css
+++ b/shared/css/base.css
@@ -90,7 +90,7 @@ a {
 }
 
 a:hover {
-  color: var(--color-secondary);
+  opacity: 0.85;
 }
 
 a:focus {
